# sudy-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROJE_ISLEYISI.md  Proje.md  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  tests.yml
configs/: inference.yaml  model_full.yaml  pretrain.yaml  rlhf.yaml  sft.yaml
data/processed/: sudy_pretrain_starter.txt  sudy_sft_starter.json  turkish_processed.txt
data/raw/: turkish_sample.txt
docker/: Dockerfile  docker-compose.yml
docs/: SECURITY.md  architecture.md  deployment.md  training_guide.md  turkish_nlp.md
scripts/: autonomous_crawler.py  crawl_and_train.py  download_data.py  download_hf_dataset.py  evaluate.py  prepare_advanced_dataset.py  preprocess_data.py  train_tokenizer.py
src/: __init__.py
src/inference/: __init__.py  api.py  batch.py  safety.py  search_utils.py
src/inference/static/: index.html
src/model/: __init__.py  architecture.py  config.py  lora.py  tokenizer.py
src/training/: __init__.py  data_utils.py  pretrain.py  rlhf.py  sft.py
tests/: test_advanced.py  test_architecture.py  test_inference.py  test_tokenizer.py  test_training.py
