[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudy"
version = "0.1.0"
description = "Gelişmiş MoE ve MLA Mimarisine Sahip Verimli Türkçe LLM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 100
target-version = ['py38']
